# hanabi.rs

./: .gitignore  Cargo.toml  README.md  deduction.md  finesses.md  loss_analysis.md  ref_sieve.md  thoughts.md
src/: cards.rs  game.rs  helpers.rs  info.rs  json_output.rs  main.rs  simulator.rs  strategies.rs  strategy.rs
src/helpers/: per_player.rs
src/strategies/: cheating.rs  examples.rs  finesses.rs  hat_helpers.rs  information.rs  ref_sieve.rs  ref_sieve_with_search.rs  simple.rs
src/strategies/finesses/: conventions.rs
src/strategies/ref_sieve/: conventions.rs
