[package]
name = "rust_hanabi"
version = "0.1.0"
authors = ["Jeff Wu <wuthefwasthat@gmail.com>"]
edition = "2021"

[dependencies]
crossbeam = "0.2.5"
float-ord = "0.2.0"
fnv = "1.0.0"
getopts = "0.2.14"
rand = "0.8.0"
rand_chacha = "0.3.0"
serde_json = "1.0.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
